<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KnowMore"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moreinfo"
            android:textSize="30sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAllCaps="true"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/yellowbg"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:padding="10dp"
                    android:text="@string/generalinfo"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:textSize="30sp"/>

                <TextView
                    android:layout_marginTop="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:padding="10dp"
                    android:text="@string/covidinfo"
                    android:textSize="12sp"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/yellowbg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:padding="10dp"
                    android:text="@string/generalinfo"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:textSize="30sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/covidinfo"
                    android:textSize="12sp" />


            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blackbg">

           <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:padding="10dp"
                android:text="@string/symptoms"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"/>

            <TextView
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:padding="10dp"
                android:text="@string/symptoms1"
                android:textColor="@color/white"
                android:textSize="14sp"/>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bluebg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:padding="10dp"
                android:text="@string/prevention"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginTop="65dp"
                android:src="@drawable/ic_prevention1"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="80dp"
                android:text="@string/prevention1"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginTop="165dp"
                android:src="@drawable/ic_prevention2"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="165dp"
                android:text="@string/prevention2"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginTop="265dp"
                android:src="@drawable/ic_prevention3"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="245dp"
                android:text="@string/prevention3"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="400dp"
                android:text="@string/prevention4"
                android:textSize="14sp"
                android:textColor="@color/white"/>



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/redbg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:padding="10dp"
                android:text="@string/vaccine"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:fontFamily="serif"
                android:padding="10dp"
                android:text="@string/treatment"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"/>





        </RelativeLayout>




    </LinearLayout>

</ScrollView>