<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_homebackground"
    tools:context=".HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                android:text="@string/sick"
                android:textColor="#FFFFFF"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="8dp"
                android:text="@string/sick1"
                android:textSize="18sp"
                android:textColor="#FFFFFF" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

            <Button
                android:id="@+id/callButton"
                android:layout_width="141dp"
                android:layout_height="45dp"
                android:layout_marginTop="32dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/call_button"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:paddingLeft="16dp"
                android:text="Call Now"
                android:onClick="doPhone"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:id="@+id/smsButton"
                android:layout_width="146dp"
                android:layout_height="45dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/send_sms_button"
                android:drawableLeft="@drawable/ic_message_circle"
                android:layout_alignParentRight="true"
                android:drawablePadding="8dp"
                android:paddingRight="16dp"
                android:text="Send SMS"
                android:onClick="doMessage"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            </RelativeLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/knowmore"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/wantToKnowMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:background="@color/card3"
            android:onClick="openMore"
            android:text="@string/knowmorebutton" />


    </LinearLayout>


</ScrollView>