<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".EachCountryDataActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:padding="10dp">

                        <org.eazegraph.lib.charts.PieChart
                            android:id="@+id/eachCountryPieChart"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_weight="1"
                            android:padding="4dp"
                            app:egDrawValueInPie="true"
                            app:egInnerPaddingColor="#bee3db"
                            app:egLegendHeight="0dp"
                            app:egValueTextSize="0dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingStart="36dp"
                            tools:ignore="RtlSymmetry">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center_vertical">

                                <View
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:background="@color/bluepie" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="10dp"
                                    android:text="@string/active"
                                    android:textColor="#000000"
                                    android:textSize="13sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center_vertical">

                                <View
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:background="@color/greenpie" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="10dp"
                                    android:text="@string/recovered"
                                    android:textColor="#000000"
                                    android:textSize="13sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center_vertical">

                                <View
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:background="@color/red" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="10dp"
                                    android:text="@string/deaths"
                                    android:textColor="#000000"
                                    android:textSize="13sp" />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:rowCount="2"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/eachcountryConfirmedCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/eachCountryConfirmedTitleTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="35dp"
                            android:gravity="center"
                            android:text="@string/confirmed"
                            android:textColor="@color/yellow"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/eachCountryConfirmedNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/eachCountryConfirmedNew"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:layout_marginBottom="35dp"
                            android:textColor="@color/yellow"
                            android:textSize="16sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/eachCountryActiveCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/eachCountryActiveTitleTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/active"
                            android:layout_marginTop="35dp"
                            android:textColor="@color/blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/eachCountryActiveNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/eachCountryActiveNew"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="35dp"
                            android:gravity="center"
                            android:textColor="@color/blue"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/eachCountryRecoveredCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/eachCountryRecoveredTitleTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/recovered"
                            android:layout_marginTop="35dp"
                            android:textColor="@color/green"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/eachCountryRecoveredNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/eachCountryRecoveredNew"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:layout_marginBottom="35dp"
                            android:textColor="@color/green"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/eachCountryDeathCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/eachCountryDeathTitleTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/deaths"
                            android:layout_marginTop="35dp"
                            android:textColor="@color/red"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/eachCountryDeathNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/eachCountryDeathNew"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:layout_marginBottom="35dp"
                            android:textColor="@color/red"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/eachCountryTestsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/totaltest"
                        android:gravity="center"
                        android:textColor="@color/pink"
                        android:layout_marginTop="25dp"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/eachCountryTestsNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:layout_marginBottom="25dp"
                        android:textColor="#000"
                        android:textSize="24sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>